force-app/main/default/objects/Computer_2__c/Computer_2__c.object-meta.xml
<CustomObject>
    <label>Computer 2</label>
    <nameField>
        <label>Computer 2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Computers2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>