force-app/main/default/objects/Computer_2__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <label>Capacity</label>
    <length>30</length>
    <type>Text</type>
</CustomField>