force-app/main/default/objects/Computer_2__c/fields/Hard_Disk_size__c.field-meta.xml
<CustomField>
    <fullName>Hard_Disk_size__c</fullName>
    <label>Hard Disk size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>