force-app/main/default/objects/Computer_2__c/fields/Processor__c.field-meta.xml
<CustomField>
    <fullName>Processor__c</fullName>
    <label>Processor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>